fix: ticker animation on IPhone

--- a/main.css
+++ b/main.css
@@ -122,6 +122,7 @@ body {
 	font-size: 16px;
 	line-height: 18px;
 	animation: ticker 3s infinite linear;
+	animation-fill-mode: both;
 	white-space: nowrap;
 }
 
